@startuml
title Entity Relationship Diagram - Part 4 of 6 - Tasks & Materials
skinparam dpi 180
skinparam linetype ortho
skinparam defaultFontName Arial
skinparam defaultFontSize 15
skinparam classFontSize 17
skinparam classAttributeFontSize 15
skinparam classHeaderFontSize 17
skinparam arrowFontSize 14
skinparam nodesep 50
skinparam ranksep 55
hide circle

entity "users" as users {
  * userId : string <<PK>>
  --
  * email : string
  * userType : string
  fullName : string
}

entity "jobs" as jobs {
  * jobId : string <<PK>>
  --
  * title : string
  * status : string
}

entity "tasks" as tasks {
  * taskId : string <<PK>>
  --
  * jobId : string <<FK jobs>>
  projectName : string
  * taskTitle : string
  description : string
  assignedTo : string
  numberOfWorkers : int
  startDate : bigint
  endDate : bigint
  * status : string
  progressPercentage : number
  progressUnit : string
  estimatedQuantity : number
  completedQuantity : number
  dailyWages : number
  totalCost : number
  photos : array
  createdBy : string <<FK users>>
  createdAt : bigint
  updatedAt : bigint
}

entity "materials" as materials {
  * materialId : string <<PK>>
  --
  * jobId : string <<FK jobs>>
  projectName : string
  * materialName : string
  * category : string
  * quantity : number
  * unit : string
  * unitPrice : number
  totalCost : number
  supplier : string
  supplierContact : string
  description : string
  * status : string
  lowStockThreshold : number
  photos : array
  addedBy : string <<FK users>>
  addedDate : bigint
  lastUpdated : bigint
}


jobs ||--o{ tasks : "tracks"
jobs ||--o{ materials : "consumes"
users ||--o{ tasks : "creates"
users ||--o{ materials : "adds"

@enduml
